[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-toolkit = { version = "0.1.0", path = "../aoc-toolkit" }
cached = "0.53.1"
geometry-rs = "0.2.1"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
ndarray = "0.16.1"
paste = "1.0.15"
pathfinding = "4.11.0"
raylib = "5.0.2"
rayon = "1.10.0"

[features]
draw = []
